--- a/API/package.json
+++ b/API/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^6.14.2",
     "jsonwebtoken": "^9.0.0",
     "luxon": "^3.2.1",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.1",
     "sequelize": "^6.28.0",
     "socket.io": "^4.6.0",
